--- a/data.ipynb
+++ b/data.ipynb
@@ -4,32 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Importando bibliotecas**"
+    "# **Importando bibliotecas**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "import plotly.express as px\n",
-    "\n"
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Importando os dados API e normalizando**"
+    "# **Importando os dados API e normalizando**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +42,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importando dados arquivo - para fins educacionais, não será utilizado no projeto"
+    "# Importando dados arquivo - para fins educacionais, não será utilizado no projeto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dados = pd.read_json('TelecomX_Data.json')\n",
+    "dados = pd.read_json('dataset/TelecomX_Data.json')\n",
     "# dados.head()\n"
    ]
   },
@@ -60,12 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normalizando os dados arquivo"
+    "## Normalizando os dados arquivo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conhecendo o Dataset**"
+    "# **Conhecendo o Dataset**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +487,7 @@
        "[7267 rows x 21 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Verificando inconsistências nas series julgadas mais importantes**"
+    "### **Verificando inconsistências nas series julgadas mais importantes**"
    ]
   },
   {
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +955,7 @@
        "[224 rows x 21 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +983,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1014,7 @@
        "       17, 18, 38, 42,  0])"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1041,7 @@
        "array(['Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1068,7 @@
        "array(['DSL', 'Fiber optic', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1095,7 @@
        "array(['One year', 'Month-to-month', 'Two year'], dtype=object)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1122,7 @@
        "array([65.6 , 59.9 , 73.9 , ..., 91.75, 68.8 , 67.85], shape=(1585,))"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1150,7 @@
        "      shape=(6531,), dtype=object)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1178,7 @@
        "       'Bank transfer (automatic)'], dtype=object)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,12 +1191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tratando inconsistências:** <br>Churn tratar nulos <br>customer.SeniorCitizen transformar em sim e não"
+    "### **Tratando inconsistências:** \n",
+    "<br>Churn tratar nulos -> menos de 5% dos dados, por este motivo decidi remover\n",
+    "<br>customer.SeniorCitizen transformar em sim e não"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1417,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,15 +1429,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-- Decisão de remover pois os dados nulos representam menos de 5% dos dados"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1445,20 +1439,19 @@
        "224"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "remover = df.query('Churn == \"\"').index\n",
-    "\n",
-    "len(remover) #conferindo a quantidade\n"
+    "len(remover) #conferindo a quantidade, 224 de 7267\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1469,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,12 +1482,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Separando as series julgadas mais importantes**"
+    "# **Separando as series julgadas mais importantes**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,12 +1501,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Normalizando dados e transformação de tipos**"
+    "## **Normalizando dados e transformação de tipos**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1773,7 @@
        "5599                    0.0  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1798,7 @@
       "---  ------                    --------------  -----  \n",
       " 0   Churn                     7043 non-null   string \n",
       " 1   customer.gender           7043 non-null   string \n",
-      " 2   customer.SeniorCitizen    7043 non-null   object \n",
+      " 2   customer.SeniorCitizen    7043 non-null   string \n",
       " 3   customer.tenure           7043 non-null   int64  \n",
       " 4   phone.PhoneService        7043 non-null   string \n",
       " 5   internet.InternetService  7043 non-null   string \n",
@@ -1813,8 +1806,8 @@
       " 7   account.PaymentMethod     7043 non-null   string \n",
       " 8   account.Charges.Monthly   7043 non-null   float64\n",
       " 9   account.Charges.Total     7043 non-null   float64\n",
-      "dtypes: float64(2), int64(1), object(1), string(6)\n",
-      "memory usage: 605.3+ KB\n"
+      "dtypes: float64(2), int64(1), string(7)\n",
+      "memory usage: 605.3 KB\n"
      ]
     }
    ],
@@ -1826,12 +1819,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Criando contas_diarias**"
+    "# **Criando contas_diarias**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1966,7 @@
        "4                   2.80  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,12 +1980,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Análise descritiva**"
+    "# **Análise descritiva**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2105,13 +2098,173 @@
        "max                 3.960000  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **DF FINAL**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>customer.gender</th>\n",
+       "      <th>customer.SeniorCitizen</th>\n",
+       "      <th>customer.tenure</th>\n",
+       "      <th>phone.PhoneService</th>\n",
+       "      <th>internet.InternetService</th>\n",
+       "      <th>account.Contract</th>\n",
+       "      <th>account.PaymentMethod</th>\n",
+       "      <th>account.Charges.Monthly</th>\n",
+       "      <th>account.Charges.Total</th>\n",
+       "      <th>account.Charges.Daily</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>65.6</td>\n",
+       "      <td>593.30</td>\n",
+       "      <td>2.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>542.40</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>73.9</td>\n",
+       "      <td>280.85</td>\n",
+       "      <td>2.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1237.85</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>267.40</td>\n",
+       "      <td>2.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Churn customer.gender customer.SeniorCitizen  customer.tenure  \\\n",
+       "0    No          Female                     No                9   \n",
+       "1    No            Male                     No                9   \n",
+       "2   Yes            Male                     No                4   \n",
+       "3   Yes            Male                    Yes               13   \n",
+       "4   Yes          Female                    Yes                3   \n",
+       "\n",
+       "  phone.PhoneService internet.InternetService account.Contract  \\\n",
+       "0                Yes                      DSL         One year   \n",
+       "1                Yes                      DSL   Month-to-month   \n",
+       "2                Yes              Fiber optic   Month-to-month   \n",
+       "3                Yes              Fiber optic   Month-to-month   \n",
+       "4                Yes              Fiber optic   Month-to-month   \n",
+       "\n",
+       "  account.PaymentMethod  account.Charges.Monthly  account.Charges.Total  \\\n",
+       "0          Mailed check                     65.6                 593.30   \n",
+       "1          Mailed check                     59.9                 542.40   \n",
+       "2      Electronic check                     73.9                 280.85   \n",
+       "3      Electronic check                     98.0                1237.85   \n",
+       "4          Mailed check                     83.9                 267.40   \n",
+       "\n",
+       "   account.Charges.Daily  \n",
+       "0                   2.19  \n",
+       "1                   2.00  \n",
+       "2                   2.46  \n",
+       "3                   3.27  \n",
+       "4                   2.80  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
