--- a/graficos.ipynb
+++ b/graficos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4                   2.80  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Evasão=%{y}<br>Count=%{x}<extra></extra>",
+         "hovertemplate": "Evasão=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "No",
          "marker": {
           "color": "rgb(102, 197, 204)",
@@ -232,7 +232,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Evasão=%{y}<br>Count=%{x}<extra></extra>",
+         "hovertemplate": "Evasão=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Yes",
          "marker": {
           "color": "rgb(246, 207, 113)",
@@ -1052,7 +1052,7 @@
           1
          ],
          "title": {
-          "text": "Count"
+          "text": "Número de clientes"
          }
         },
         "yaxis": {
@@ -1086,7 +1086,7 @@
     "             x='Count', \n",
     "             title='Número de pessoas que optaram ou não pela evasão', \n",
     "             color='Churn', color_discrete_sequence=px.colors.qualitative.Pastel,  \n",
-    "             labels={'Churn': 'Evasão', 'count': 'Número de pessoas'})\n",
+    "             labels={'Churn': 'Evasão', 'Count': 'Número de clientes'})\n",
     "fig.update_layout(\n",
     "            width = 900,\n",
     "            height= 500)\n",
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +2915,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Electronic check",
          "marker": {
           "color": "rgb(102, 197, 204)",
@@ -2939,7 +2939,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Mailed check",
          "marker": {
           "color": "rgb(246, 207, 113)",
@@ -2963,7 +2963,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Bank transfer (automatic)",
          "marker": {
           "color": "rgb(248, 156, 116)",
@@ -2987,7 +2987,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de pagamento=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Credit card (automatic)",
          "marker": {
           "color": "rgb(220, 176, 242)",
@@ -3807,7 +3807,7 @@
           1
          ],
          "title": {
-          "text": "Número de pessoas"
+          "text": "Número de clientes"
          }
         },
         "yaxis": {
@@ -3843,7 +3843,7 @@
     "             x='count', title='Evasão por tipo de pagamento',\n",
     "             color='account.PaymentMethod', \n",
     "             color_discrete_sequence=px.colors.qualitative.Pastel, \n",
-    "             labels={'account.PaymentMethod': 'Tipo de pagamento', 'count': 'Número de pessoas'})\n",
+    "             labels={'account.PaymentMethod': 'Tipo de pagamento', 'count': 'Número de clientes'})\n",
     "fig.update_layout(\n",
     "            width = 900,\n",
     "            height= 500)\n",
@@ -3866,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3877,7 +3877,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Tipo de contrato=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de contrato=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Month-to-month",
          "marker": {
           "color": "rgb(102, 197, 204)",
@@ -3901,7 +3901,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Tipo de contrato=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de contrato=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "One year",
          "marker": {
           "color": "rgb(246, 207, 113)",
@@ -3925,7 +3925,7 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "Tipo de contrato=%{y}<br>Número de pessoas=%{x}<extra></extra>",
+         "hovertemplate": "Tipo de contrato=%{y}<br>Número de clientes=%{x}<extra></extra>",
          "legendgroup": "Two year",
          "marker": {
           "color": "rgb(248, 156, 116)",
@@ -4745,7 +4745,7 @@
           1
          ],
          "title": {
-          "text": "Número de pessoas"
+          "text": "Número de clientes"
          }
         },
         "yaxis": {
@@ -4781,7 +4781,7 @@
     "             title='Evasão por tipo de contrato', \n",
     "             color='account.Contract', \n",
     "             color_discrete_sequence=px.colors.qualitative.Pastel, \n",
-    "             labels={'account.Contract': 'Tipo de contrato', 'count': 'Número de pessoas'})\n",
+    "             labels={'account.Contract': 'Tipo de contrato', 'count': 'Número de clientes'})\n",
     "fig.update_layout(\n",
     "            width = 900,\n",
     "            height= 500)\n",
@@ -4804,7 +4804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4814,7 +4814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -4841,12 +4841,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "clientes com mais tempo de contrato tendem a ficar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Evasão por serviço de telefone**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -5748,12 +5755,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "clientes com serviço de telefone são a maioria na contagem de evasão, sinalizando uma problematica nesse quesito"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Evasão por serviço de internet**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -6679,6 +6693,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "clientes com fibra óptica são a maioria na contagem de evasão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Evasão por gastos**"
    ]
   },
@@ -6691,7 +6712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -6723,7 +6744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -6755,7 +6776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
