imagens estaticas graficos interativos

--- a/graficos.ipynb
+++ b/graficos.ipynb
@@ -1097,6 +1097,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='img_estaticas_graficos/churn_geral.png'> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Evasão por gênero**"
    ]
   },
@@ -2002,6 +2009,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='img_estaticas_graficos/churn_genero.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Evasão por idade**"
    ]
   },
@@ -2886,6 +2900,13 @@
     "\n",
     "fig.update_traces(textposition='inside', textinfo='percent+label', rotation=45, hovertemplate=\"<b>%{label}</b><br>Total: %{value}<br>Porcentagem: %{percent}\")\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='img_estaticas_graficos/churn_idade.png'>"
    ]
   },
   {
@@ -3854,6 +3875,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='img_estaticas_graficos/churn_pagamento.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "O tipo de pagamento com maio evasão é o de pagamento eletrônico"
    ]
   },
@@ -4786,6 +4814,13 @@
     "            width = 900,\n",
     "            height= 500)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='img_estaticas_graficos/churn_contrato.png'>"
    ]
   },
   {
@@ -5755,6 +5790,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='img_estaticas_graficos/churn_telefone.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "clientes com serviço de telefone são a maioria na contagem de evasão, sinalizando uma problematica nesse quesito"
    ]
   },
@@ -6687,6 +6729,13 @@
     "            width = 900,\n",
     "            height= 500)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='img_estaticas_graficos/churn_internet.png'>"
    ]
   },
   {
