--- a/graficos.ipynb
+++ b/graficos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,8 @@
        "      <th>Churn</th>\n",
        "      <th>customer.gender</th>\n",
        "      <th>customer.SeniorCitizen</th>\n",
+       "      <th>customer.Partner</th>\n",
+       "      <th>customer.Dependents</th>\n",
        "      <th>customer.tenure</th>\n",
        "      <th>phone.PhoneService</th>\n",
        "      <th>internet.InternetService</th>\n",
@@ -52,6 +54,8 @@
        "      <td>No</td>\n",
        "      <td>Female</td>\n",
        "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>9</td>\n",
        "      <td>Yes</td>\n",
        "      <td>DSL</td>\n",
@@ -65,6 +69,8 @@
        "      <th>1</th>\n",
        "      <td>No</td>\n",
        "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>9</td>\n",
        "      <td>Yes</td>\n",
@@ -80,6 +86,8 @@
        "      <td>Yes</td>\n",
        "      <td>Male</td>\n",
        "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>4</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Fiber optic</td>\n",
@@ -94,6 +102,8 @@
        "      <td>Yes</td>\n",
        "      <td>Male</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "      <td>13</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Fiber optic</td>\n",
@@ -108,6 +118,8 @@
        "      <td>Yes</td>\n",
        "      <td>Female</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "      <td>3</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Fiber optic</td>\n",
@@ -122,36 +134,36 @@
        "</div>"
       ],
       "text/plain": [
-       "  Churn customer.gender customer.SeniorCitizen  customer.tenure  \\\n",
-       "0    No          Female                     No                9   \n",
-       "1    No            Male                     No                9   \n",
-       "2   Yes            Male                     No                4   \n",
-       "3   Yes            Male                    Yes               13   \n",
-       "4   Yes          Female                    Yes                3   \n",
+       "  Churn customer.gender customer.SeniorCitizen customer.Partner  \\\n",
+       "0    No          Female                     No              Yes   \n",
+       "1    No            Male                     No               No   \n",
+       "2   Yes            Male                     No               No   \n",
+       "3   Yes            Male                    Yes              Yes   \n",
+       "4   Yes          Female                    Yes              Yes   \n",
        "\n",
-       "  phone.PhoneService internet.InternetService account.Contract  \\\n",
-       "0                Yes                      DSL         One year   \n",
-       "1                Yes                      DSL   Month-to-month   \n",
-       "2                Yes              Fiber optic   Month-to-month   \n",
-       "3                Yes              Fiber optic   Month-to-month   \n",
-       "4                Yes              Fiber optic   Month-to-month   \n",
+       "  customer.Dependents  customer.tenure phone.PhoneService  \\\n",
+       "0                 Yes                9                Yes   \n",
+       "1                  No                9                Yes   \n",
+       "2                  No                4                Yes   \n",
+       "3                  No               13                Yes   \n",
+       "4                  No                3                Yes   \n",
        "\n",
-       "  account.PaymentMethod  account.Charges.Monthly  account.Charges.Total  \\\n",
-       "0          Mailed check                     65.6                 593.30   \n",
-       "1          Mailed check                     59.9                 542.40   \n",
-       "2      Electronic check                     73.9                 280.85   \n",
-       "3      Electronic check                     98.0                1237.85   \n",
-       "4          Mailed check                     83.9                 267.40   \n",
+       "  internet.InternetService account.Contract account.PaymentMethod  \\\n",
+       "0                      DSL         One year          Mailed check   \n",
+       "1                      DSL   Month-to-month          Mailed check   \n",
+       "2              Fiber optic   Month-to-month      Electronic check   \n",
+       "3              Fiber optic   Month-to-month      Electronic check   \n",
+       "4              Fiber optic   Month-to-month          Mailed check   \n",
        "\n",
-       "   account.Charges.Daily  \n",
-       "0                   2.19  \n",
-       "1                   2.00  \n",
-       "2                   2.46  \n",
-       "3                   3.27  \n",
-       "4                   2.80  "
+       "   account.Charges.Monthly  account.Charges.Total  account.Charges.Daily  \n",
+       "0                     65.6                 593.30                   2.19  \n",
+       "1                     59.9                 542.40                   2.00  \n",
+       "2                     73.9                 280.85                   2.46  \n",
+       "3                     98.0                1237.85                   3.27  \n",
+       "4                     83.9                 267.40                   2.80  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +180,7 @@
     "resultado_dados_api = dados_api.json()\n",
     "df = pd.json_normalize(resultado_dados_api)\n",
     "#separando colunas importantes\n",
-    "series_importantes = ['Churn', 'customer.gender', 'customer.SeniorCitizen', 'customer.tenure', \n",
+    "series_importantes = ['Churn', 'customer.gender', 'customer.SeniorCitizen', 'customer.Partner','customer.Dependents', 'customer.tenure', \n",
     "                      'phone.PhoneService', 'internet.InternetService', 'account.Contract', 'account.PaymentMethod', \n",
     "                      'account.Charges.Monthly', 'account.Charges.Total']\n",
     "df = df[series_importantes]\n",
@@ -178,7 +190,7 @@
     "df['customer.SeniorCitizen'] = df['customer.SeniorCitizen'].astype(str)\n",
     "df['customer.SeniorCitizen'] = df['customer.SeniorCitizen'].map({'0': 'No', '1': 'Yes'})\n",
     "#normalizando os tipos de dados\n",
-    "col_string = ['Churn', 'customer.gender', 'customer.SeniorCitizen', 'phone.PhoneService', 'internet.InternetService',\n",
+    "col_string = ['Churn', 'customer.gender', 'customer.SeniorCitizen', 'customer.Partner','customer.Dependents', 'phone.PhoneService', 'internet.InternetService',\n",
     "              'account.Contract', 'account.PaymentMethod']\n",
     "df = df.astype({col: 'string' for col in col_string})\n",
     "df['account.Charges.Total'] = df['account.Charges.Total'].replace(' ', '0')\n",
@@ -197,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3894,7 +3906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4839,7 +4851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4849,7 +4861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4888,7 +4900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5809,7 +5821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -6761,7 +6773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6793,7 +6805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -6825,7 +6837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
